fixed baebox title on small viewport

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -34,6 +34,11 @@ body {
     left: 47.5%;
 }
 
+.navbar-brand-xs{
+    left: 0% !important;
+}
+
+
 .title-xs{
     font: $fancy-font;
     text-transform: uppercase;
